[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Card/CardsGenerator.gd" type="Script" id=1]
[ext_resource path="res://Art/Cards/card_back_alt.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Gameplay/GameHandler.gd" type="Script" id=3]
[ext_resource path="res://Themes/default_theme.tres" type="Theme" id=4]
[ext_resource path="res://Scenes/UI/GameInterface.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Config/DeckConfigurator.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Gameplay/CardHolder.tscn" type="PackedScene" id=7]

[node name="Game" type="Node"]
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="GameInterface" parent="." instance=ExtResource( 5 )]

[node name="DeckConfigurator" parent="." instance=ExtResource( 6 )]

[node name="SelfCardHolder" parent="." instance=ExtResource( 7 )]
custom_constants/separation = -130

[node name="AICardHolder" parent="." instance=ExtResource( 7 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_bottom = 200.0
custom_constants/separation = -130

[node name="DrawCardButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -92.5
margin_right = 140.0
margin_bottom = 92.5
texture_normal = ExtResource( 2 )

[node name="TableCardHolder" type="Control" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -92.0
margin_right = -7.0
margin_bottom = 93.0
mouse_filter = 1

[node name="CardsGenerator" type="Node" parent="."]
script = ExtResource( 1 )

[node name="AITurnIndicator" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -139.0
margin_top = 200.0
margin_right = 140.0
margin_bottom = 260.0
theme = ExtResource( 4 )
text = "OPPONENT TURN"
align = 1
valign = 1

[node name="PlayerTurnIndicator" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -139.0
margin_top = -267.0
margin_right = 140.0
margin_bottom = -207.0
theme = ExtResource( 4 )
text = "PLAYER TURN"
align = 1
valign = 1

[connection signal="button_down" from="DrawCardButton" to="." method="_on_DrawCardButton_button_down"]
